# advent-of-code

./: Cargo.toml  README.md
2019/asteroids/: Cargo.toml
2019/cgame/: Cargo.toml
2019/fft/: Cargo.toml
2019/painting_robot/: Cargo.toml
2019/portals/: Cargo.toml
2019/reactions/: Cargo.toml
2019/repair_droid/: Cargo.toml
2019/springdroid/: Cargo.toml
2019/tractor_beam/: Cargo.toml
2019/wires/: Cargo.toml
2022/: Cargo.toml
2022/p01-calorie-counting/: Cargo.toml
2022/p01-calorie-counting/src/: main.rs
2022/p02-rock-paper-scissors/: Cargo.toml
2022/p02-rock-paper-scissors/src/: main.rs  round.rs  shape.rs  strategy.rs
2022/p03-rucksack-reorganization/: Cargo.toml
2022/p03-rucksack-reorganization/src/: main.rs
2022/p04-camp-cleanup/: Cargo.toml
2022/p04-camp-cleanup/src/: main.rs
2022/p05-supply-stacks/: Cargo.toml
2022/p05-supply-stacks/src/: execute.rs  main.rs  parse.rs
2022/p06-tuning-trouble/: Cargo.toml
2022/p06-tuning-trouble/src/: main.rs
2022/p07-no-space-left-on-device/: Cargo.toml
2022/p07-no-space-left-on-device/src/: dir.rs  main.rs  parser.rs  walk_item.rs
2024/: .gitignore  args.zig  grid.zig  main.zig
arcade_game/: Cargo.toml
ascii/: Cargo.toml  orig.txt
bugs/: Cargo.toml
cards/: Cargo.toml
cgame/: instructions.txt
data/: program2.txt  program5_d.txt  test0.txt
dijkstra/: Cargo.toml
jupiter_moons/: Cargo.toml
keys_puzzle/: Cargo.toml
orbits/: Cargo.toml
src/: channel.rs  lib.rs  main.rs  maze.rs  opcode.rs  program.rs  router.rs  solution_7a.rs  solution_7b.rs  state.rs
tests/: lib.rs
(+235 files in other folders)
