[workspace]
members = [
    "p01-calorie-counting",
    "p02-rock-paper-scissors",
    "p03-rucksack-reorganization",
    "p04-camp-cleanup",
    "p05-supply-stacks",
    "p06-tuning-trouble",
    "p07-no-space-left-on-device",
]

[workspace.dependencies]
clap = { version = "4.0.29", features = [ "derive" ] }
